--- a/src/app/components/page-header-bar/page-header-bar.component.scss
+++ b/src/app/components/page-header-bar/page-header-bar.component.scss
@@ -29,6 +29,7 @@
 	align-items: center;
 	gap: 8px;
 	width: 100%;
+	height: 100%;
 	max-width: var(--max-page-width);
 	padding: 8px;
 	white-space: nowrap;
